--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
+
         <activity android:name=".base.BaseActivity" />
+        <activity
+            android:name=".composite.CompositeActivity"
+            android:label="@string/title_composite"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".bridge.BridgeActivity"
             android:label="@string/title_bridge"
