--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity android:name=".base.BaseActivity" />
-
+        <activity
+            android:name=".facade.FacadeActivity"
+            android:label="@string/title_facade"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".decorator.DecoratorActivity"
             android:label="@string/title_decorator"
