--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.1.2'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
