--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.1.2'
-
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0'
     }
 }
 
