--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    //In-app updates
+    implementation 'com.google.android.play:core:1.7.2'
+
     //Material Design
     implementation "com.google.android.material:material:$material_design_version"
 
