--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.github.odaridavid.designpatterns">
 
     <application
+        android:name=".DesignPatternsApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +14,10 @@
         tools:ignore="AllowBackup"
         tools:replace="android:allowBackup">
         <activity android:name=".base.BaseActivity" />
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/menu_settings"
+            android:parentActivityName=".ui.MainActivity" />
         <activity
             android:name=".ui.AboutActivity"
             android:label="@string/menu_about"
